--- a/css/texte_sw.css
+++ b/css/texte_sw.css
@@ -149,3 +149,12 @@ form {
 
     
 }
+
+@media screen and (max-width:425px) {
+
+   #start_button {
+       font-size:1rem;
+       border-radius: 10px;
+   }
+
+}
